--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -92,8 +92,7 @@
             <embed src="pdf/Binary_Numbers_Lessson_Plan.pdf" type="application/pdf" width="950" height="1000"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Sorting_Assignment.pdf" type="application/pdf" width="800" height="1000"
-                title="Embedded PDF Document">
+            <img src="../img/Sorting Assignment.jpg" alt="Algorithm Sorting Assignment in Schoology">
 
             <img src="../img/cards.jpg" alt="large cards with numbers written on them">
             <img src="../img/Students_Sorting.webp" alt="students holding cards standing in a line">
