made most backgrounds fixed

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="school inglemoor-leaf intasc">
+    <section class="school inglemoor-pine intasc">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
