--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -13,7 +13,7 @@
         div#modalbox {
             width: 95% !important;
         }
-        
+
         /* The Image Box */
         div.img {
             border: 1px solid #ccc;
@@ -203,10 +203,9 @@
                 each other. Students with learning differences get the support they need.</p>
             <p>We also help each other feel safe by setting a ground rule that all interactions are respectful. I never
                 had to issue more than a verbal correction for disrespectful speech during my internship, but if needed
-                I could escalate to detention or get support from the student’s counselor.</p>
-            <p>A couple times I did need to have the conversation that just because your friend says he’s “okay with it”
-                doesn’t make it okay. He doesn’t want to lose your friendship. What kind of friend are you to put him in
-                that position?</p>
+                I could escalate to detention or get support from the student’s counselor. A couple times I did need to
+                have the conversation that just because your friend says he’s “okay with it” doesn’t make it okay. He
+                doesn’t want to lose your friendship. What kind of friend are you to put him in that position?</p>
             <p>The artifacts below show some other ways I worked to build a safe, supportive learning environment:</p>
             <ul>
                 <li>"Human Bingo" Icebreaker for the first day of Personal Finance class. There were two versions of
@@ -235,7 +234,8 @@
                 title="Embedded PDF Document">
 
             <div id="modalbox" class="box">
-                <h2 style="text-align:center">Student Responses to History of Computer Science Group Discussion Questions</h2>
+                <h2 style="text-align:center">Student Responses to History of Computer Science Group Discussion
+                    Questions</h2>
 
                 <div class="responsive">
                     <div class="img">
