--- a/pages/biography.html
+++ b/pages/biography.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section class="cwusign grid1">
+    <section class="cwu grid1">
         <nav>
             <div>
                 <a href="../index.html">Home</a>
@@ -59,14 +59,12 @@
                     passing is considered at least 3.0.</p>
                 <p>This is revolutionary. What matters in competency-based learning is what you learned by the end of
                     the process, not how well you performed while you were learning. Failing an exam at a traditional
-                    school
-                    means taking the whole class over again, wasting weeks on the sections you already know. In
+                    school means taking the whole class over again, wasting weeks on the sections you already know. In
                     competency-based learning, you only study the parts you didn’t do well on and take the test again.
-                    Self-paced is good both for the highly capable who can accelerate and those needing extra help. More
-                    to the point, each individual can accelerate through sections that come easily or are already known
-                    and
-                    slow down for sections that are more difficult. Competency-based learning is at once democratizing,
-                    equitable, and accommodating.</p>
+                    Self-paced is good both for the highly capable who can accelerate and those needing extra help.
+                    More to the point, each individual can accelerate through sections that come easily or are already
+                    known and slow down for sections that are more difficult. Competency-based learning is at once
+                    democratizing, equitable, and accommodating.</p>
                 <p>I became intrigued with how my own early educational career might have been different. As I studied
                     more, I learned that colleges and high schools are adopting competency-based learning along with
                     “flipped classrooms”, where the students watch recorded lectures at home and come to class to get
@@ -88,10 +86,8 @@
                 <h2>Professional Training</h2>
                 <p>The most significant training I’ve enrolled in as an educator is the Masters of Arts in Teaching
                     (MAT) with Central Washington University, starting June 2024, with a teaching certificate endorsed
-                    in
-                    Computer Science and Mathematics anticipated in June 2025 and the masters completion anticipated in
-                    August
-                    2025.
+                    in Computer Science and Mathematics anticipated in June 2025 and the masters completion anticipated
+                    in August 2025.
                 </p>
                 <p>In July 2024, I attended a week-long seminar for Computer Science professors held by the National IT
                     Innovation Center (NITIC), called Summer Working Connections. I was enrolled in the Cyber Buffet
