added diversity reading to intasc10

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -52,6 +52,8 @@
                 and services. Some act in an advisory capacity, stepping back giving perspective. Even just showing up
                 faithfully is leadership, because without a cadre of reliable, supportive volunteers every non-profit
                 organization would fail.</p>
+            <p>Standard #10 is also about collaboration with students and cross-discipline with colleagues. There are
+                many natural connections that add interest and make the learner's education more well-rounded.</p>
         </div>
 
         <div class="intasc grid2">
@@ -90,6 +92,7 @@
                     their generation will work on. It's also important to see no matter who you are that important
                     contributions were made by people who look like you.</p>
                 <h3>Language Arts</h3>
+                <h4>Scholarship Essay</h4>
                 <p>This last year I also taught Personal Finance, including a unit on Paying for College. One of the
                     lessons I developed was on winning scholarships, with an assigned scholarship essay. Students were
                     taught that the elements of a winning scholarhip essay are:</p>
@@ -109,10 +112,19 @@
                 <p>As an example, I present from the Assessment page a scholarship rough draft written by one of my
                     students, the feedback I gave him, and his final draft: <a
                         href="intasc6.html#scholarship">Scholarship Essay</a></p>
+                <h4>Reading and Diversity</h4>
+                <p>For my Children’s Literature class this summer, we created posters to promote diversity in reading,
+                    keeping in mind our school’s demographics and the interests of our students. At my host school,
+                    Asians are the largest minority group at 20%; in my Computer Science classes it’s over to 50%. My CS
+                    students are naturally interested in science and science fiction so my theme was Exploration with
+                    motifs of space, the oceans, and computers. The resources represented include graphic novels,
+                    chapter books, fiction and non-fiction, magazines, and websites.</p>
             </div>
         </div>
         <div class="intasc grid1">
             <embed src="pdf/History_of_Computer_Science.pdf" type="application/pdf" width="1320" height="800"
+                title="Embedded PDF Document">
+            <embed src="pdf/Diversity_Literature_Display.pdf" type="application/pdf" width="1320" height="800"
                 title="Embedded PDF Document">
         </div>
         <div class="intasc grid2">
