Update intasc10.html text in diversity reading paragraph

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -118,7 +118,9 @@
                     Asians are the largest minority group at 20%; in my Computer Science classes it’s over to 50%. My CS
                     students are naturally interested in science and science fiction so my theme was Exploration with
                     motifs of space, the oceans, and computers. The resources represented include graphic novels,
-                    chapter books, fiction and non-fiction, magazines, and websites.</p>
+                    chapter books, fiction and non-fiction, photo essay books, magazines, and websites. These posters
+                    would be of interest to my students, promote reading, and not look at all out of place in a computer
+                    science classroom.</p>
             </div>
         </div>
         <div class="intasc grid1">
