Update intasc3.html added attribution to w3shools for image gallery

--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -8,7 +8,7 @@
     <link href="../img/education_icon.ico" rel="icon" type="image/x-icon">
     <title>InTASC Standard #3</title>
     <script src="../script/subnav.js"></script>
-
+    /* The Image Gallery code on this page was adapted from https://www.w3schools.com/css/css_image_gallery.asp */
     <style>
         div#modalbox {
             width: 95% !important;
