moved all embed and iframe styling to css, made responsive

--- a/intasc/intasc4.html
+++ b/intasc/intasc4.html
@@ -82,14 +82,22 @@
         </div>
 
         <div class="intasc grid1">
-            <embed src="pdf/Loops.pdf" type="application/pdf" width="1500" height="800" title="Embedded PDF Document">
+            <embed src="pdf/Loops.pdf" type="application/pdf" title="Embedded PDF Document">
 
-            <iframe src="https://1drv.ms/p/c/cc1b7ab97fbc565f/IQSmeu-Am8iSR4GYhp0jzuslAXVJjehnbLDe0KKBoYd8pEE"
-                title="Algorithms: Trees, Binary Trees, and AVL Trees PowerPoint presentation" width="1500" height="800"
-                frameborder="0" scrolling="no"></iframe>
+                <div class="box">
+                <h2>Algorithms: Trees, Binary Trees, and AVL Trees PowerPoint presentation</h2>
+                <hr>
+                <div class="video">
+                    <div>
+                        <iframe
+                            src="https://1drv.ms/p/c/cc1b7ab97fbc565f/IQSmeu-Am8iSR4GYhp0jzuslAXVJjehnbLDe0KKBoYd8pEE"
+                            title="Algorithms: Trees, Binary Trees, and AVL Trees PowerPoint presentation"
+                            scrolling="no"></iframe>
+                    </div>
+                </div>
+            </div>
 
-            <embed src="pdf/Paying_for_College_Part_I.pdf" type="application/pdf" width="1500" height="800"
-                title="Embedded PDF Document">
+            <embed src="pdf/Paying_for_College_Part_I.pdf" type="application/pdf" title="Embedded PDF Document">
         </div>
     </section>
 </body>
