--- a/intasc/intasc6.html
+++ b/intasc/intasc6.html
@@ -238,13 +238,13 @@
                 </ul>
             </div>
 
-            <embed src="pdf/History_of_Computer_Science_Exit_Ticket.pdf" type="application/pdf" width="800" height="800"
+            <embed src="pdf/History_of_Computer_Science_Exit_Ticket.pdf" type="application/pdf"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Mock_Final.pdf" type="application/pdf" width="800" height="800"
+            <embed src="pdf/Mock_Final.pdf" type="application/pdf"
                 title="Embedded PDF Document">
 
-            <embed src="pdf/Item_Banks.pdf" type="application/pdf" width="800" height="800"
+            <embed src="pdf/Item_Banks.pdf" type="application/pdf"
                 title="Embedded PDF Document">
         </div>
     </section>
