--- a/intasc/intasc7.html
+++ b/intasc/intasc7.html
@@ -80,11 +80,8 @@
                 <h2>Computer Science Lesson Plans</h2>
             </div>
             <div class="intasc grid2">
-                <embed src="pdf/History_of_Computer_Science_Lesson_Plan.pdf" type="application/pdf" width="900"
-                    height="1000" title="Embedded PDF Document">
-
-                <embed src="pdf/Loops_Lesson_Plan.pdf" type="application/pdf" width="900" height="1000"
-                    title="Embedded PDF Document">
+                <embed src="pdf/History_of_Computer_Science_Lesson_Plan.pdf" type="application/pdf" title="Embedded PDF Document">
+                <embed src="pdf/Loops_Lesson_Plan.pdf" type="application/pdf" title="Embedded PDF Document">
             </div>
 
             <div class="box intasc">
@@ -108,11 +105,9 @@
                 </ul>
             </div>
 
-            <div class="intasc grid2b">
-                <embed src="pdf/Finance_Curriculum.pdf" type="application/pdf" width="650" height="1000"
-                    title="Embedded PDF Document">
-
-                <embed src="pdf/Finance_Car_Buying_Lesson_Plan.pdf" type="application/pdf" width="1000" height="1000"
+            <div class="intasc grid2">
+                <embed src="pdf/Finance_Curriculum.pdf" type="application/pdf" title="Embedded PDF Document">
+                <embed src="pdf/Finance_Car_Buying_Lesson_Plan.pdf" type="application/pdf"
                     title="Embedded PDF Document">
             </div>
         </div>
