--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -113,19 +113,17 @@
                     students, the feedback I gave him, and his final draft: <a
                         href="intasc6.html#scholarship">Scholarship Essay</a></p>
                 <h4>Reading and Diversity</h4>
-                <p>For my Children’s Literature class this summer, we created posters to promote diversity in reading,
-                    keeping in mind our school’s demographics and the interests of our students. At my host school,
-                    Asians are the largest minority group at 20%; in my Computer Science classes it’s over to 50%. My CS
-                    students are naturally interested in science and science fiction so my theme was Exploration with
-                    motifs of space, the oceans, and computers. The resources represented include graphic novels,
-                    chapter books, fiction and non-fiction, magazines, and websites.</p>
+                <p>For my Children’s Literature class this summer, we created posters to promote reading during
+                    Diversity Week keeping in mind our school’s demographics and the interests of our students. At my
+                    host school, Asians are the largest minority group at 20%; in my Computer Science classes it’s over
+                    to 50%. My CS students are naturally interested in science and science fiction so my theme was
+                    Exploration with motifs of space, the oceans, and computers. The resources represented include
+                    graphic novels, chapter books, fiction and non-fiction, magazines, and websites.</p>
             </div>
         </div>
         <div class="intasc grid1">
-            <embed src="pdf/History_of_Computer_Science.pdf" type="application/pdf" width="1320" height="800"
-                title="Embedded PDF Document">
-            <embed src="pdf/Diversity_Literature_Display.pdf" type="application/pdf" width="1320" height="800"
-                title="Embedded PDF Document">
+            <embed src="pdf/History_of_Computer_Science.pdf" type="application/pdf" title="Embedded PDF Document">
+            <embed src="pdf/Diversity_Literature_Display.pdf" type="application/pdf" title="Embedded PDF Document">
         </div>
         <div class="intasc grid2">
             <div class="box intasc">
