--- a/intasc/intasc2.html
+++ b/intasc/intasc2.html
@@ -225,78 +225,45 @@
                     </ul>
                     <p>You may pick&nbsp;any&nbsp;school, but here is a list of local schools that I came up with:</p>
                     <table>
+                        <colgroup>
+                            <col class="name">
+                            <col class="url">
+                            <col class="city">
+                        </colgroup>
                         <tbody>
                             <tr>
-                                <td>
-                                    <p>Bates Technical College</p>
-                                </td>
-                                <td>
-                                    <p><a href="https://www.batestech.edu/" rel="noopener"
-                                            target="_blank">https://www.batestech.edu/</a></p>
-                                </td>
-                                <td>
-                                    <p>Tacoma</p>
-                                </td>
+                                <td>Bates Technical College</td>
+                                <td><a href="https://www.batestech.edu/" rel="noopener"
+                                        target="_blank">https://www.batestech.edu</a></td>
+                                <td>Tacoma</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>Clover Park Technical College</p>
-                                </td>
-                                <td>
-                                    <p><a href="https://www.cptc.edu/" rel="noopener"
-                                            target="_blank">https://www.cptc.edu/</a></p>
-                                </td>
-                                <td>
-                                    <p>Puyallup</p>
-                                </td>
+                                <td>Clover Park Technical College</td>
+                                <td><a href="https://www.cptc.edu/" rel="noopener"
+                                        target="_blank">https://www.cptc.edu</a></td>
+                                <td>Puyallup</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>Green River College</p>
-                                </td>
-                                <td>
-                                    <p><a href="https://www.greenriver.edu/" rel="noopener"
-                                            target="_blank">https://www.greenriver.edu/</a></p>
-                                </td>
-                                <td>
-                                    <p>Auburn</p>
-                                </td>
+                                <td>Green River College</td>
+                                <td><a href="https://www.greenriver.edu/" rel="noopener"
+                                        target="_blank">https://www.greenriver.edu</a></td>
+                                <td>Auburn</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>Lake Washington Institute of Technology</p>
-                                </td>
-                                <td>
-                                    <p><a href="http://www.lwtech.edu/" rel="noopener"
-                                            target="_blank">http://www.lwtech.edu</a></p>
-                                </td>
-                                <td>
-                                    <p>Bothell</p>
-                                </td>
+                                <td>Lake Washington Institute of Technology</td>
+                                <td><a href="http://www.lwtech.edu/" rel="noopener"
+                                        target="_blank">http://www.lwtech.edu</a></td>
+                                <td>Bothell</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>Pima Medical Institute</p>
-                                </td>
-                                <td>
-                                    <p><a href="https://pmi.edu/" rel="noopener" target="_blank">https://pmi.edu/</a>
-                                    </p>
-                                </td>
-                                <td>
-                                    <p>Seattle</p>
-                                </td>
+                                <td>Pima Medical Institute</td>
+                                <td><a href="https://pmi.edu/" rel="noopener" target="_blank">https://pmi.edu</a></td>
+                                <td>Seattle</td>
                             </tr>
                             <tr>
-                                <td>
-                                    <p>Renton Technical College</p>
-                                </td>
-                                <td>
-                                    <p><a href="https://rtc.edu/" rel="noopener" target="_blank">https://rtc.edu/</a>
-                                    </p>
-                                </td>
-                                <td>
-                                    <p>Renton</p>
-                                </td>
+                                <td>Renton Technical College</td>
+                                <td><a href="https://rtc.edu/" rel="noopener" target="_blank">https://rtc.edu</a></td>
+                                <td>Renton</td>
                             </tr>
                         </tbody>
                     </table>
@@ -307,30 +274,45 @@
                 </div>
             </div>
         </section>
+
         <div class="box">
             <h2>The School I Chose - Analise</h2>
             <hr>
-            <iframe title="The School I Chose - Analise"
-                src="https://docs.google.com/presentation/d/1gW5I1wlVp6r9qfiOxu-cElBi1ciIDgvztkJZdpNFs4Q/embed?start=true&loop=true&delayms=3000"
-                width="1600" height="900" allowfullscreen>
-            </iframe>
+            <div class="video">
+                <div>
+                    <iframe title="The School I Chose - Analise"
+                        src="https://docs.google.com/presentation/d/1gW5I1wlVp6r9qfiOxu-cElBi1ciIDgvztkJZdpNFs4Q/embed?start=true&loop=true&delayms=3000"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
         </div>
         <div class="box">
             <h2>The School I Chose - Sarah</h2>
             <hr>
-            <iframe title="The School I Chose - Sarah"
-                src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/embed?start=true&loop=true&delayms=3000"
-                width="1600" height="900" allowfullscreen>
-            </iframe>
+            <div class="video">
+                <div>
+                    <iframe title="The School I Chose - Sarah"
+                        src="https://docs.google.com/presentation/d/1gvxAGLWaszIcScLCFjG39bNE_v71tkUBmr-idutmTkE/embed?start=true&loop=true&delayms=3000"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
         </div>
         <div class="box">
             <h2>Best Colleges Visit - Joshua</h2>
             <hr>
-            <iframe title="Best Colleges Visit - Joshua"
-                src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/embed?start=true&loop=true&delayms=3000"
-                width="1600" height="900" allowfullscreen>
-            </iframe>
+            <div class="video">
+                <div>
+                    <iframe title="Best Colleges Visit - Joshua"
+                        src="https://docs.google.com/presentation/d/1Zr6RAumHoJsFIzcvYzwHEd9Ei911qBeK0dMlhWXT6HA/embed?start=true&loop=true&delayms=3000"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </div>
         </div>
+
+
     </section>
 </body>
 
