--- a/intasc/intasc5.html
+++ b/intasc/intasc5.html
@@ -101,8 +101,10 @@
             </div>
         </div>
         <br>
-        <div class="intasc grid1">
-            <embed src="pdf/RESEARCH-Find_Your_Next_Car.pdf" type="application/pdf" width="1300" height="900"
+        <div class="intasc box">
+            <h2>Student Submission for Find Your Next Car</h2>
+            <hr>
+            <embed src="pdf/RESEARCH-Find_Your_Next_Car.pdf" type="application/pdf"
                 title="Embedded PDF Document">
         </div>
     </section>
