--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -75,22 +75,25 @@
                 physically understand how the sorting algorithms work.</p>
         </div>
 
-        <div class="intasc grid1">
-            <iframe width="1120" height="730" src="https://www.youtube.com/embed/g06hNBhoS1k?si=zVrcWAtdn7obY6W2"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="box">
+            <h2>Shell Sort vs. Selection Sort video</h2>
+            <hr>
+            <div class="video">
+                <div>
+                    <iframe src="https://www.youtube.com/embed/g06hNBhoS1k?si=zVrcWAtdn7obY6W2"
+                        title="Shell Sort vs. Selection Sort video"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
 
         <div class="intasc grid2">
-            <embed src="pdf/Intro_to_Algorithms.pdf" type="application/pdf" width="900" height="1000"
-                title="Embedded PDF Document">
+            <embed src="pdf/Intro_to_Algorithms.pdf" type="application/pdf" title="Embedded PDF Document">
 
-            <embed src="pdf/Palindrome_Detection_Project.pdf" type="application/pdf" width="900" height="1000"
-                title="Embedded PDF Document">
+            <embed src="pdf/Palindrome_Detection_Project.pdf" type="application/pdf" title="Embedded PDF Document">
 
-            <embed src="pdf/Binary_Numbers_Lessson_Plan.pdf" type="application/pdf" width="950" height="1000"
-                title="Embedded PDF Document">
+            <embed src="pdf/Binary_Numbers_Lessson_Plan.pdf" type="application/pdf" title="Embedded PDF Document">
 
             <img src="../img/Sorting Assignment.jpg" alt="Algorithm Sorting Assignment in Schoology">
 
