--- a/pages/resume.html
+++ b/pages/resume.html
@@ -39,7 +39,7 @@
 
         <h1>Resume</h1>
         <div class="grid1">
-            <embed src="Gary_Malkasian.pdf" type="application/pdf" width="1200" height="1200"
+            <embed class="resume" src="Gary_Malkasian.pdf" type="application/pdf" width="1200" height="1200"
                 title="Embedded PDF Document">
         </section>
 
