removed formatting on p, fixed typos in intasc10

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -115,12 +115,12 @@
                 <h4>Reading and Diversity</h4>
                 <p>For my Children’s Literature class this summer, we created posters to promote reading during
                     Diversity Week, keeping in mind our school’s demographics and the interests of our students. At my
-                    host school, Asians are the largest minority group at 20%; in my Computer Science classes it’s over
-                    to 50%. My CS students are naturally interested in science and science fiction so my theme was
-                    Exploration with motifs of space, the oceans, and computers. The resources represented include
-                    graphic novels, chapter books, fiction and non-fiction, photo essay books, magazines, and websites.
-                    These posters would be of interest to my students, promote reading, and not look at all out of place
-                    in a computer science classroom</p>
+                    host school, Asians are the largest minority group at 20%, and they comprise over half of my
+                    Computer Science students. My CS students are naturally interested in science and science fiction so
+                    my theme was Exploration with motifs of space, the oceans, and computers. The resources represented
+                    include graphic novels, chapter books, fiction and non-fiction, photo essay books, magazines, and
+                    websites. This display would interest my students, promote reading, and not look at all out of place
+                    in a computer science classroom.</p>
             </div>
         </div>
         <div class="intasc grid1">
