Update intasc8.html fixed Insertion sort typo

--- a/intasc/intasc8.html
+++ b/intasc/intasc8.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="box">
-            <h2>Shell Sort vs. Selection Sort video</h2>
+            <h2>Shell Sort vs. Insertion Sort video</h2>
             <hr>
             <div class="video">
                 <div>
