added text to intasc10

--- a/intasc/intasc10.html
+++ b/intasc/intasc10.html
@@ -52,8 +52,11 @@
                 and services. Some act in an advisory capacity, stepping back giving perspective. Even just showing up
                 faithfully is leadership, because without a cadre of reliable, supportive volunteers every non-profit
                 organization would fail.</p>
-            <p>Standard #10 is also about collaboration with students and cross-discipline with colleagues. There are
-                many natural connections that add interest and make the learner's education more well-rounded.</p>
+            <p>Standard #10 is also about collaboration with students, with colleagues, and cross-discipline. There are
+                many natural connections that add interest and make the learner's education more well-rounded. Literacy
+                and communication skills are important no matter what the field, for example, and so is a sense of
+                history to understand our current context. Collaboration also gives students a sense of ownership and
+                agency in their own education.</p>
         </div>
 
         <div class="intasc grid2">
@@ -86,10 +89,10 @@
             <div class="box intasc">
                 <h2>Cross-Discipline Instruction</h2>
                 <h3>Social Studies</h3>
-                <p>History of Computer Science PowerPoint presentation: I give this lecture on the first day of all
-                    my computer science classes (HTML, C#, Java, Algorithms) because it is important for students to
-                    understand where we are in history, the contributions of the pioneers, and what new challenges
-                    their generation will work on. It's also important to see no matter who you are that important
+                <p>History of Computer Science PowerPoint presentation: this is my favorite lecture. I give it on the
+                    first day of all my computer science classes (HTML, C#, Java, Algorithms) because it's important for
+                    students to understand where we are in history, the contributions of the pioneers, and what the new
+                    challenges are for their generation. It's also important to see no matter who you are that important
                     contributions were made by people who look like you.</p>
                 <h3>Language Arts</h3>
                 <h4>Scholarship Essay</h4>
