changes to look better on mobile device

--- a/intasc/intasc3.html
+++ b/intasc/intasc3.html
@@ -230,12 +230,10 @@
         </div>
 
         <div class="intasc grid2">
-            <embed src="pdf/Human_Bingo.pdf" type="application/pdf" width="800" height="600"
-                title="Embedded PDF Document">
+            <embed src="pdf/Human_Bingo.pdf" type="application/pdf" title="Embedded PDF Document">
 
             <div id="modalbox" class="box">
-                <h2 style="text-align:center">Student Responses to History of Computer Science Group Discussion
-                    Questions</h2>
+                <h2>Student Responses to History of Computer Science Group Discussion Questions</h2>
 
                 <div class="responsive">
                     <div class="img">
