--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
 
         <div class="main">
             <a href="https://www.cwu.edu/academics/educational-foundations/graduate/mat/master-arts-teaching.php"><img
-                    class="left" src="img/CWU_Medallion-RGB-transparent.png" alt="Seal of Central Washington University"></a>
-
-            <div class="box center">
-                Central Washington University
-                <br>Masters of Teaching Program
-                <br>Summer 2024 Cohort
-            </div>
+                    class="left" src="img/CWU_Medallion-RGB-transparent.png"
+                    alt="Seal of Central Washington University"></a>
 
             <img class="right" src="img/Gary.jpg" alt="photo of Gary Malkasian">
+
+            <div id="title" class="box center">
+                Central Washington University
+                <br>Masters of Arts in Teaching Program
+                <br>Summer 2024 Cohort
+            </div>
         </div>
     </section>
 </body>
